Spring Boot 单元测试

--- a/魔法书.md
+++ b/魔法书.md
@@ -28,3 +28,131 @@ select * from columns where table_name = table_name;
 ```
 
 ![image-20200511094200824](C:\Users\Dell\AppData\Roaming\Typora\typora-user-images\image-20200511094200824.png)
+
+# SpringBoot单元测试
+
+参考：https://www.jianshu.com/p/b50ac44c3444
+
+## *注意事项*
+
+### 1. test pom的引入
+
+spring boot默认test的引入方式中去掉了org.junit.vintage，去掉这句：
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+    <exclusions>
+    <exclusion>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+    </exclusions>
+</dependency>
+```
+
+正确的引用方式：
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+</dependency>
+```
+
+### 2. 使用正确的Test注解
+
+应该使用：
+
+`org.junit.Test`
+
+而不是：
+
+`org.junit.jupiter.api.Test`
+
+### 3. Test类和方法必须用public修饰
+
+## 一、基本单元测试
+
+- pom.xml
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+</dependency>
+```
+
+- 测试代码
+
+```java
+@RunWith(SpringRunner.class)
+@SpringBootTest
+public class HelloControllerTest {
+
+    @Autowired
+    private HelloController helloController;
+
+    @Test
+    public void getHello() throws Exception {
+        final String greeting = helloController.index();
+        Assert.assertEquals("Hello World!", greeting);
+    }
+}
+```
+
+## 二、Mock方式（推荐）
+
+```java
+@RunWith(SpringRunner.class)
+@SpringBootTest
+//配置mock
+@AutoConfigureMockMvc
+public class HelloControllerTest {
+
+    @Autowired
+    private MockMvc mvc;
+
+    @Test
+    public void getHello() throws Exception {
+        mvc.perform(MockMvcRequestBuilders.get("/").accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(content().string(equalTo("Hello World!")));
+    }
+}
+```
+
+## 三、容器方式（不推荐）
+
+- pom.xml
+
+```java
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-webflux</artifactId>
+    <scope>test</scope>
+</dependency>
+```
+
+- 配置服务器与客户端
+
+```java
+@RunWith(SpringRunner.class)
+//配置本地随机端口，服务器会选择一个空闲的端口使用，避免端口冲突
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+public class HelloControllerServerTest {
+    @Autowired
+    private WebTestClient webClient;
+
+    @Test
+    public void exampleTest() {
+        this.webClient.get().uri("/").exchange().expectStatus().isOk()
+                .expectBody(String.class).isEqualTo("Hello World!");
+    }
+}
+```
+
