Spring Boot单元测试代码生成模板

--- a/魔法书.md
+++ b/魔法书.md
@@ -156,3 +156,41 @@ public class HelloControllerServerTest {
 }
 ```
 
+## 扩展
+
+### 生成代码模板
+
+#### 1. 带多个请求参数的Mock测试单元
+
+```java
+@Test
+public void $var$() throws Exception {
+    String uri = $var$;
+    MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+    String paramN1 = $var$;
+    List<String> paramV1 = new LinkedList<>();
+    paramV1.add($var$);
+    params.put(paramN1, paramV1);
+
+    mvc.perform(MockMvcRequestBuilders.post(uri).params(params).accept(MediaType.APPLICATION_JSON))
+            .andExpect(MockMvcResultMatchers.status().isOk())
+            .andExpect(MockMvcResultMatchers.content().string(Matchers.equalTo("success")));
+
+}
+```
+
+#### 2. 带单个请求参数的Mock测试单元
+
+```java
+@Test
+public void $var$() throws Exception {
+    String uri = $var$;
+    String paramN = $var$;
+    String paramV = $var$;
+
+    mvc.perform(MockMvcRequestBuilders.post(uri).param(paramN, paramV).accept(MediaType.APPLICATION_JSON))
+            .andExpect(MockMvcResultMatchers.status().isOk())
+            .andExpect(MockMvcResultMatchers.content().string(Matchers.equalTo("success")));
+}
+```
+
