--- a/魔法书.md
+++ b/魔法书.md
@@ -164,12 +164,12 @@ public class HelloControllerServerTest {
 
 ```java
 @Test
-public void $var$() throws Exception {
-    String uri = $var$;
+public void $var1$() throws Exception {
+    String uri = $var2$;
     MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
-    String paramN1 = $var$;
+    String paramN1 = $var3$;
     List<String> paramV1 = new LinkedList<>();
-    paramV1.add($var$);
+    paramV1.add($var4$);
     params.put(paramN1, paramV1);
 
     mvc.perform(MockMvcRequestBuilders.post(uri).params(params).accept(MediaType.APPLICATION_JSON))
@@ -183,10 +183,10 @@ public void $var$() throws Exception {
 
 ```java
 @Test
-public void $var$() throws Exception {
-    String uri = $var$;
-    String paramN = $var$;
-    String paramV = $var$;
+public void $var1$() throws Exception {
+    String uri = $var2$;
+    String paramN = $var3$;
+    String paramV = $var4$;
 
     mvc.perform(MockMvcRequestBuilders.post(uri).param(paramN, paramV).accept(MediaType.APPLICATION_JSON))
             .andExpect(MockMvcResultMatchers.status().isOk())
