静态代码块的加载时机

--- a/魔法书.md
+++ b/魔法书.md
@@ -240,3 +240,63 @@ public class UserLocationControllerTest {
 {"data":{"offlineTime":"2020-05-11 11:41:43"},"retCode":500103,"message":"下线"}
 ```
 
+# static代码块的加载时机
+
+1. 初始化子类时会加载父类的静态代码块;使用非final的静态字段会加载静态代码块
+
+2. initialize为false时不加载静态代码块
+
+​	Class.forName(String name, boolean initialize, ClassLoader loader)
+
+3. 使用final的静态字段不会加载静态代码块
+
+4. 使用非final的静态字段会加载静态代码块
+
+   ```java
+   package com.liyue.juc;
+   
+   /**
+    * 静态代码块加载
+    */
+   public class StaticLoader_TestCase {
+   
+       static final int x = 1;
+   
+       static {
+           System.out.println("static block load");
+       }
+   
+   }
+   
+   class A extends StaticLoader_TestCase {
+   
+   }
+   
+   class Main {
+   
+       public static void main(String[] args) {
+           try {
+               // initialize=false时不加载静态代码块
+               Class c = Class.forName("com.liyue.juc.StaticLoader_TestCase",
+                       true,
+                       StaticLoader_TestCase.class.getClassLoader());
+   
+   
+               // 初始化子类时会加载父类的静态代码块
+               A a = new A();
+   
+               // 使用final的静态字段并不会调用静态代码块
+               // 使用非final的静态字段会加载静态代码块
+               System.out.println(StaticLoader_TestCase.x);
+           } catch (Exception e) {
+               e.printStackTrace();
+           }
+       }
+   
+   }
+   ```
+
+   
+
+
+
